# BuildingPermitParser

./: CMakeLists.txt  README.md
OpenXLSX/: CMakeLists.txt
include/: gui.hpp  main.hpp  parser.hpp
src/: gui.cpp  main.cpp  parser.cpp
test/: Building Permits.xlsx  test.txt
